feat: Implement smart parking system with database integration and REST API endpoints